--- a/less/base/_default.less
+++ b/less/base/_default.less
@@ -37,9 +37,9 @@ h1 {
 .container {
   max-width: 1170px;
   width: 100%;
-  padding: 0 15px;
-  margin: auto;
+  margin: 0 auto;
   box-sizing: border-box;
+  padding: 0 15px;
 }
 
 .container-fruid {
@@ -49,7 +49,7 @@ h1 {
 }
 
 .row {
-  display: grid;
+  display: flex;
   flex-wrap: wrap;
   margin: 0 -15px;
 }
