--- a/less/base/_footer.less
+++ b/less/base/_footer.less
@@ -8,43 +8,59 @@
     font-size: 14px;
     color: @text-boldest-gray-color;
     img {
-      display: block;
-      padding: 100px 0 20px;
+      padding: 98px 0 28px 0px;
     }
 
     p {
       width: 50%;
-      padding: 0 370px 50px;
+      display: block;
+      margin: 0 auto;
+      margin-bottom: 40px;
     }
-
-    i {
-      margin: 0 20px 60px;
+    .footer-icon-social {
+      margin: 0px -22px 47px 29px;
+      i {
+        margin-right: 40px;
+        font-size: 18px;
+      }
     }
   }
   &-content {
-    display: flex;
-    border-top: 1px solid rgba(216, 209, 209, 0.808);
-    margin: 0 144px 0 161px;
+    
     h4 {
       text-transform: uppercase;
       color: @text-white-color;
       font-size: 18px;
-      margin: 80px 174px 40px 0;
+      margin: 80px 174px 28px 0;
     }
 
     li {
       font-size: 14px;
       color: @text-bolder-gray-color;
-      margin: 0 0 30px;
+      margin: 0 0 19px;
     }
     .contact-us {
+      // width: 20%;
       span {
-        margin-left: 25px;
+        margin-left: 15px;
       }
     }
+    .row{
+      border-top: 1px solid rgba(216, 209, 209, 0.808);
+      justify-content: space-between;
+    }
+    // .my-account {
+    //   width: 20%;
+    // }
+    // .information {
+    //   width: 20%;
+    // }
+    // .quick-link {
+    //   width: 20%;
+    // }
   }
   .copyright p {
-    padding: 15px;
+    padding: 46px;
     background-color: @bg-copyright;
     font-size: 14px;
     text-align: center;
