--- a/less/content/_slider.less
+++ b/less/content/_slider.less
@@ -1,89 +1,125 @@
-.banner {
-  max-height: 950px;
-  position: relative;
-  &-item {
-    img {
-      display: block;
-      width: 100%;
-    }
-  }
-  &-content {
-    position: absolute;
-    top: 220px;
-    left: 161px;
-    width: 37%;
-    color: @text-white-color;
-    h1 {
-      font-size: 60px;
-    }
-    h2 {
-      font-size: 40px;
-      margin-bottom: 15px;
-    }
-    p {
-      font-size: 14px;
-    }
-    button {
-      background-color: unset;
-      color: @text-white-color;
-      padding: 15px 54.5px;
-      border-color: @text-white-color;
-      text-transform: uppercase;
-      font-size: 14px;
-      margin-top: 75px;
-    }
-  }
-}
-.grid-container {
-  top: 672px;
-  display: grid;
-  position: absolute;
-  text-align: center;
-  grid-template-columns: 390px 390px 390px;
-  background-color: @text-white-color;
-  margin-left: 161px;
+.wrapper {
+  background-image: url("../img/Banner_01.png");
+  background-repeat: no-repeat;
+  background-size: contain;
 
-  .intro-box {
-    height: 250px;
-    text-align: center;
-    object-fit: cover;
-    img {
-      display: block;
-      width: 100%;
-      height: 100%;
-    }
-    &-strength img {
-      width: 10%;
-      padding: 30px 0 15px 0;
-    }
-    &-dumbbells img {
-      width: 17%;
-      padding: 30px 0 15px 0;
-    }
-    &-power img {
-      width: 10%;
-      padding: 30px 0 15px 0;
-    }
+  .banner {
     &-content {
-      b {
-        font-size: 18px;
-        text-transform: uppercase;
+      width: 48%;
+      color: @text-white-color;
+      margin-bottom: -1%;
+      padding-top: 22%;
+      h1 {
+        font-size: 60px;
       }
-
+      h2 {
+        font-size: 40px;
+        line-height: 23px;
+        margin: 12px 0 38px 0;
+      }
       p {
         font-size: 14px;
-        display: inline-block;
-        width: 290px;
-        margin-top: 20px;
-        line-height: 27px;
-        color: @text-bolder-gray-color;
+      }
+      button {
+        background-color: unset;
+        color: @text-white-color;
+        height: 50px;
+        width: 170px;
+        line-height: 48px;
+        border-color: @text-white-color;
+        text-transform: uppercase;
+        font-size: 14px;
+        margin-top: 11%;
       }
     }
-    &-dumbbells {
-      box-shadow: -3px -1px 6px -1px rgb(187 187 187);
-    }
-    &-power {
-      box-shadow: 5px 4px 5px -4px rgb(187 187 187);
+  }
+  .grid-intro-box {
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    padding-top: 255px;
+
+    .collumn-intro-box {
+      width: 33.33%;
+      .intro-box {
+        text-align: center;
+        img {
+          overflow: hidden;
+          height: 250px;
+          width: 100%;
+        }
+        &-strength {
+          background-color: @text-white-color;
+
+          img {
+            padding: 34px 0 14px 0;
+          }
+        }
+        &-dumbbells {
+          img {
+            padding: 34px 0 14px 0;
+          }
+          // p {
+          //   width: 290px;
+          //   margin: 20px 0 0 50px;
+          //   line-height: 24px;
+          //   color: @text-bolder-gray-color;
+          // }
+        }
+        &-power {
+          img {
+            padding: 34px 0 14px 0;
+          }
+        }
+        &-content {
+          &-strength {
+            line-height: 31px;
+            max-width: 290px;
+            margin-left: 48px;
+
+            padding-bottom: 31px;
+            b {
+              font-size: 18px;
+              text-transform: uppercase;
+            }
+            p {
+              font-size: 14px;
+            }
+          }
+          &-dumbbells {
+            line-height: 31px;
+            max-width: 290px;
+            margin-left: 48px;
+            padding-bottom: 40px;
+            b {
+              font-size: 18px;
+              text-transform: uppercase;
+            }
+            p {
+              font-size: 14px;
+            }
+          }
+          &-power {
+            line-height: 31px;
+            max-width: 290px;
+            margin-left: 48px;
+            padding-bottom: 25px;
+            b {
+              font-size: 18px;
+              text-transform: uppercase;
+            }
+            p {
+              font-size: 14px;
+            }
+          }
+        }
+        &-dumbbells {
+          box-shadow: -5px 5px 5px -4px rgb(187 187 187);
+        }
+        &-power {
+          box-shadow: 5px 4px 5px -4px rgb(187 187 187);
+        }
+      }
     }
   }
 }
